--- a/mystyle.css
+++ b/mystyle.css
@@ -7,6 +7,13 @@ body{
 
 }
 
+#footer{
+    text-align: center;
+background:#be52df;
+display-flex: flex;
+justify-content: center;
+}
+
 @-webkit-keyframes gradient {
 	0% {
 		background-position: 0% 50%;
@@ -83,6 +90,7 @@ div{
 p:hover,p.active{
     background: none;
     color: white;
+    font-color: white;
 }
   nav{
     background: #be52df;
